# pytest-regtest2

./: .gitignore  README.md  pyproject.toml  pytest_regtest.py  setup.py
pytest_regtest2/: __init__.py
tests/: conftest.py  test_plugin.py
