[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-regtest2"
dynamic = ["version"]
description = "pytest plugin for regression tests"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Daniel Biehl", email = "dbiehl@live.de" },
    { name = "Uwe Schmitt", email = "uwe.schmitt@id.ethz.ch" },
]
dependencies = ["pytest>=7.2.0"]
requires-python = ">=3.8"

[project.entry-points.pytest11]
regtest2 = "pytest_regtest2"

[project.urls]
Homepage = "https://github.com/d-biehl/pytest-regtest2"

[tool.hatch.version]
path = "pytest_regtest2/__version__.py"

[[tool.hatch.envs.devel.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
